chore: fix another jdk problem